Workspace Overflow Fixes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -194,6 +194,7 @@ body {
 
 #playlister-statusbar {
   margin-top: 5px;
+  height: 10%;
 }
 
 .error-type, .status-type {
@@ -237,6 +238,16 @@ body {
   width: 80%;
   height: 100%;
   background-color: var(--swatch-primary);
+}
+
+.song-list {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  justify-content: center;
+  overflow: scroll;
+  overflow-x: hidden;
+  scrollbar-color: gray var(--swatch-primary);
 }
 
 .item-number,
